mydeploy-mse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mydeploy-mse
  name: mydeploy-mse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydeploy-mse
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mydeploy-mse
    spec:
      containers:
      - image: niranjanv64/ms-user-static-ext:v1
        name: ms-user-static-ext
        ports:
        - containerPort: 7070
        args: ["-Dspring.config.location=/opt/config/application.yml","org.sj.msuserstaticext.MsUserStaticExtApplication"]
        resources: {}
        #env:
        #  - name: JAVA_OPTS
        #    value: "-Dspring.config.location=/opt/config"
        volumeMounts:
          - name: my-config-map-mse
            mountPath: /opt/config
      volumes:
        - name: my-config-map-mse
          configMap:
            name: my-config-map-mse
status: {}
