mydeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mydeploy
  name: mydeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydeploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mydeploy
    spec:
      containers:
      - image: niranjanv64/ms-user-static
        name: ms-user-static
        ports:
        - containerPort: 8080
        args: ["org.sj.msuserstatic.MsUserStaticApplication"]
        resources: {}
status: {}
