mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mypod
  name: mypod
spec:
  containers:
  - image: niranjanv64/ms-user-static
    name: mypod
    resources: {}
    args: ["org.sj.msuserstatic.MsUserStaticApplication"]
    ports:
    - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
