svc-microsvc-static-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-microsvc-static-1
  annotations:
     konghq.com/plugins: kp-key-auth
spec:
  selector:
    app: deploy-microsvc-static-1
  ports:
    - protocol: TCP
      port: 7050
      targetPort: 7050
  clusterIP: 10.8.14.120
  type: ClusterIP
