svc-microsvc-static-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-microsvc-static-2
  annotations:
    konghq.com/plugins: kp-app-jwt
    #konghq.com/plugins: kp-key-auth
spec:
  selector:
    app: deploy-microsvc-static-2
  ports:
    - protocol: TCP
      port: 7051
      targetPort: 7051
  clusterIP: 10.8.13.21
  #clusterIP: 10.96.10.222
  type: ClusterIP
