svc-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-ms
spec:
  selector:
    app: mydeploy-ms
  ports:
    - protocol: TCP
      port: 6060
      targetPort: 6060
  clusterIP: 10.106.80.197
  type: ClusterIP
