svc-mse-load.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  selector:
    app: mydeploy-mse
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 7070
      nodePort: 30007
  clusterIP: 10.106.80.200
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
