ingress-for-kong.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-for-kong
  annotations:
    #konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    # konghq.com/plugins: kp-kong-oidc
spec:
  rules:
  - http:
      paths:
      - path: /microsvc-static-1  # accepts /microsvc-static-1*
        backend:
          serviceName: svc-microsvc-static-1
          servicePort: 7050
      - path: /microsvc-static-2/health
        backend:
          serviceName: svc-microsvc-static-2
          servicePort: 7051
      - path: /microsvc-static-2/callOtherService
        backend:
          serviceName: svc-microsvc-static-2
          servicePort: 7051
